tests/invalid/duplicate.brandejs
;label is taken
navesti HLT
navesti HLT